<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">הגדרות</string>
    <string name="send_mail_hint">Send e-mail...</string>
    <string name="call_hint">Dial...</string>
    <string name="app_no_mail_client">No e-mail client found</string>
    <string name="app_no_call_client">No phone software installed</string>
    <string name="play_service_do_not_supported">Google Play services are not installed on this device</string>
    <string name="not_found_camera">This device has no camera</string>
    <string name="cant_create_photo">Could not create an image</string>
    <string name="file_is_not_found">File not found</string>
    <string name="uncompilable_type">File type is not compatible</string>
    <string name="cant_get_location">Can not find the location</string>
    <string name="download">Download</string>
    <string name="download_from">Download from</string>
    <string name="download_success">Download completed</string>
    <string name="download_fail">Unable to download the required file / Download failed</string>
    <string name="no_application_to_open_pdf">There is no app available to display the PDF file</string>
    <string name="device_not_supported">The device is not supported</string>
    <string name="ticket_is_sent">Ticket has been sent</string>
    <string name="not_selected_age_or_gender">You have not selected "gender" and "age"</string>
    <string name="you_already_survey">You have already voted</string>
    <string name="vote_is_already_close">Voting has been closed</string>
    <string name="vote_is_empty">No voting activities</string>
    <string name="ssl_error">SSL error</string>
    <string name="the_certificate_authority_is_not_trusted">The certificate authority is not trusted</string>
    <string name="the_certificate_has_expired">The certificate has expired</string>
    <string name="the_certificate_hostname_mismatch">HOSTNAME does not match the certificate</string>
    <string name="the_certificate_is_not_yet_valid">The certificate is still active</string>
    <string name="notification">Notification</string>
    <string name="username_is_already_used">Username already exists</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="description">Description:</string>
    <string name="vote_title">שם ההצבעה</string>
    <string name="choose_another_vote">Choose another voting</string>
    <string name="in_order_to_vote_you_must_select_the_gender_and_age">To vote you must select "gender" and "age"</string>

    <!--dialogs-->
    <string name="dialog_camera_add_photo">Add photo</string>
    <string name="dialog_camera_btn_camera">Take a photo</string>
    <string name="dialog_camera_btn_gallery">Choose photo from gallery</string>
    <string name="dialog_map_filter_header_text">Interest points filter</string>
    <string name="age">Choose age</string>
    <string name="gender">Choose gender</string>
    <string name="choice_vote">Choose voting</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="dialog_map_filter_btn_select">Choose</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!--menu-->
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_back">Back</string>
    <string name="menu_refresh">Refresh</string>

    <!-- four state layout-->
    <string name="empty_message">No data</string>
    <string name="error_message">Error</string>
    <string name="refresh_button_text">Try again</string>
    <!--map fragment -->
    <!--<string name="btn_interest_point_title">נקודות עניין</string>-->
    <string name="map_btn_filter">Filter</string>
    <string name="map_btn_trips">Trips</string>

    <!-- nodes titles -->

    <string name="title_activity_dialog">הדו-שיח</string>


    <!-- for test, remove after -->
    <string name="focus_address">Street</string>
    <string name="focus_number">Num.</string>
    <string name="focus_f_name">First name</string>
    <string name="focus_l_name">Last name</string>
    <string name="focus_descripstion">Description</string>
    <string name="focus_phon">Phone number</string>
    <string name="focus_mobile">Mobile number</string>
    <string name="focus_email">E-mail</string>
    <string name="focus_titel">Reporting center</string>
    <string name="focus_titel2">Update details</string>
    <string name="focus_name_city">City</string>

    <string name="sign_in_dialog_login">Sign in</string>
    <string name="sign_up_dialog_lName">Last name</string>
    <string name="sign_up_dialog_fName">First name</string>
    <string name="focus_street">Street name</string>
    <string name="focus_house">House</string>
    <string name="sign.up.dialog.error.text">Fill in this field</string>
    <string name="sign.up.dialog.error.text.wrong.street.name">Wrong street name</string>
    <string name="sign_up_dialog_incorrect_phone_number">Incorrect phone number format</string>
    <string name="sign_up_dialog_incorrect_email">Wrong e-mail format</string>
    <string name="gcm_SenderID">226589076343</string>
    <string name="setting_dialog_logout">Log out</string>
    <string name="title_activity_splash_screen">Screen introduction</string>
    <string name="ivalid_number">Invalid number</string>
    <string name="contact_mail">support@quickwork.co.il</string>
    <string name="personal_area_id">Ticket number:</string>
    <string name="personal_status">Status:</string>

    <string name="not_a_member">Not a member? <b>Tap here</b> to register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>


    <string name="phone_number">Phone number</string>
    <string name="mobile_phone">Mobile number</string>
    <string name="email">E-mail</string>
    <string name="house">House</string>
    <string name="do_you_want_to_receive_global_notifications">Would you like to receive global notifications?</string>
    <string name="do_you_want_to_receive_personal_notifications">Would you like to receive personal notifications?</string>
    <string name="dialog_setting_update_info">Personal details</string>
    <string name="dialog_setting_sign_in">Sign In</string>
    <string name="connection_error">The server is not responding</string>
    <string name="loading_string">Loading</string>
    <string name="incorrect_credentials">Incorrect username or password</string>
    <string name="loading_string_sign_up_dialog">Loading</string>
    <string name="no_messages_for_resident">No messages for resident</string>
    <string name="no.appeals.found">No appeals</string>
    <string name="dialog_title_interest_area">Interest areas</string>
    <string name="dialog_setting_update_resident_info">Personal details</string>

    <string name="header_trun_on_text">Use GPS</string>
    <string name="middle_trun_on_text">To find your address automatically</string>
    <string name="footer_trun_on_text">Tap here</string>

    <string name="header_trun_off_text">Address is not correct?</string>
    <string name="middle_trun_off_text">To enter your address manually</string>
    <string name="footer_trun_off_text">Tap here</string>
    <string name="btn_send_appeal_fragment">Send</string>
    <string name="item_description">Description:</string>
    <string name="item_address">Address:</string>
    <string name="item_date_time">Date and time:</string>
    <string name="item_resident_message">Message:</string>
    <string name="visible_tickets_20">20</string>
    <string name="visible_tickets_50">50</string>
    <string name="visible_tickets_100">100</string>
    <string name="dialog_title_visible_tickets">Amount of visible tickets</string>
    <string name="update_timer">1440</string>
    <string name="alertdialog_remind_me_later">Remind me later</string>
    <string name="alertdialog_update_now">Update now</string>
    <string name="alertdialog_update_available">A new version is available for download</string>
    <string name="text_search">Search</string>
    <string name="dialog_hotcalls_header">Hot calls</string>
    <string name="dialog_hotcalls_save">Save</string>
    <string name="dialog_hotcalls_enter_number">Enter a number</string>
    <string name="dialog_hotcalls_set_emergency_numbers">Enter emergency numbers</string>
    <string name="dialog_marker_areas_btn_confirm">Ok</string>
    <string name="dialog_settings_emergency_button">Hot calls</string>
    <string name="dialog_settings_header">Settings</string>
    <string name="dialog_sign_up_btn_sign_up">Sign up</string>
    <string name="dialog_visible_tickets_confirm">Ok</string>
    <string name="dialog.lang.confirm">אישור</string>
    <string name="item_email">E-mail:</string>
    <string name="item_mobile_phone">Mobile number:</string>
    <string name="item_phone_number">Phone number:</string>
    <string name="item_price">Price:</string>
    <string name="dialog_settigns_interests">Interest areas</string>
    <string name="fragment_send_mail_to_contact_us">To contact us, please fill in the following information</string>
    <string name="fragmend_send_mail_detail">First name:</string>
    <string name="fragment_send_mail_lname">Last name:</string>
    <string name="fragment_send_mail_email">E-mail address:</string>
    <string name="fragment_send_mail_description">Description:</string>
    <string name="fragment_send_mail_cancel">Cancel</string>
    <string name="fragment_send_mail_send">Send</string>
    <string name="dialog_title_languages">Language</string>
    <string name="dialog_language_english">English</string>
    <string name="dialog_language_hebrew">Hebrew (עברית)</string>
    <string name="restart_app_string">אנא הפעל אפליקציה מחדש, כדי ששינויי שפה יכנסו לתוקף.</string>
    <string name="attention_string">תשומת הלב</string>
    <string name="cannot_find_street">Can not find the street address, pick it from dropdown list</string>
    <string name="city_entity_detail">Details:</string>
    <string name="city_entity_post">Post:</string>
    <string name="city_entity_email">Email:</string>
    <string name="city_entity_info">Information:</string>
    <string name="city_entity_phone">Phone number:</string>
    <string name="city_entity_mobile_number">Mobile number:</string>
    <string name="sign_up_update_profile_text">Save changes</string>
    <string name="fragment_dialog_signup">Registration</string>
    <string name="appels.item.no.photo.available">No photo available</string>
    <string name="fragment_dialog_sign_up_alter_title">Personal details</string>
    
    <string name="text.when.no.results.in.list">No results</string>


</resources>
