<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/darker_gray"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:padding="10dp"
        android:textSize="24sp"
        android:textColor="@color/turquoise"
        android:gravity="left|center_vertical"
        android:textStyle="bold"
        android:background="#424242"/>

    <RadioGroup
        android:id="@+id/rgGender_FDG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:text="@string/male"
            android:layout_gravity="start|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"/>

        <RadioButton
            android:text="@string/female"
            android:paddingRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#424242"
        >

        <Button
            android:id="@+id/btnCancel_DFG"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:layout_margin="4dp"
            android:background="@color/turquoise"
            android:textColor="@android:color/white"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnOk_DFG"
            android:layout_width="0dp"
            android:text="@string/btn_ok"
            android:textColor="@android:color/white"
            android:layout_margin="4dp"
            android:background="@color/turquoise"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>