<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#424242"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/settings10">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">



        <EditText
            android:id="@+id/etUsername_SIDF"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="right|center_vertical"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@android:color/black"
            android:textColorHint="#616161"
            android:textSize="@dimen/sign_up_dialog_textSize"
            />

        <EditText
            android:id="@+id/etPassword_SIDF"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etUsername_SIDF"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="right|center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@android:color/black"
            android:textColorHint="#616161"
            android:textSize="@dimen/sign_up_dialog_textSize"/>

        <Button
            android:id="@+id/btnSignIn_SIDF"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/etPassword_SIDF"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@color/turquoise"
            android:text="@string/sign_in_dialog_login"
            android:textColor="#fff"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvSignUp_SIDF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/btnSignIn_SIDF"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/not_a_member"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    </RelativeLayout>

</RelativeLayout>