<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="#C3C3C3"
        android:drawablePadding="@dimen/person5"
        android:paddingBottom="@dimen/person5"
        android:paddingRight="@dimen/focus15"
        android:paddingTop="@dimen/focus15"
        android:text="פרטים אישיים"
        android:textColor="@color/turquoise"
        android:textSize="@dimen/focussp22"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/person20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/survey50height"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/etLastName_SUDF"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/new_rec_setting2"
                android:ellipsize="end"

                android:gravity="right|center_vertical"
                android:hint="@string/focus_l_name"
                android:padding="@dimen/person5" />

            <EditText
                android:id="@+id/etFirstName_SUDF"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/profile10"
                android:layout_weight="1"
                android:background="@drawable/new_rec_setting2"
                android:ellipsize="end"
                android:gravity="right|center_vertical"
                android:hint="@string/focus_f_name"
                android:padding="@dimen/person5" />
        </LinearLayout>

        <EditText
            android:id="@+id/update_details_phon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/survey50height"
            android:gravity="right|center_vertical"
            android:layout_marginTop="@dimen/profile10margin"
            android:background="@drawable/new_rec_setting2"
            android:hint="@string/focus_phon"
            android:inputType="phone"

            android:paddingLeft="@dimen/survey5"
            android:paddingRight="@dimen/survey5" />

        <EditText
            android:id="@+id/update_details_mobil"
            android:layout_width="match_parent"
            android:layout_height="@dimen/survey50height"
            android:gravity="right|center_vertical"
            android:layout_marginTop="@dimen/profile10margin"

            android:background="@drawable/new_rec_setting2"
            android:hint="@string/focus_mobile"
            android:inputType="phone"
            android:paddingLeft="@dimen/survey5"
            android:paddingRight="@dimen/survey5" />

        <EditText
            android:id="@+id/update_details_mail"

            android:layout_width="match_parent"
            android:layout_height="@dimen/survey50height"
            android:gravity="right|center_vertical"
            android:layout_marginTop="@dimen/profile10margin"
            android:background="@drawable/new_rec_setting2"

            android:hint="@string/focus_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/survey5"
            android:paddingRight="@dimen/survey5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/survey50height"
            android:layout_marginTop="@dimen/profile10margin"
            android:orientation="horizontal"
            android:weightSum="3">

            <EditText
                android:id="@+id/update_details_number_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:layout_weight="1"

                android:background="@drawable/new_rec_setting2"
                android:hint="@string/focus_number"
                android:inputType="number"
                android:padding="@dimen/survey5" />

            <EditText
                android:id="@+id/update_details_address"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/profile10"
                android:layout_weight="2"
                android:background="@drawable/new_rec_setting2"
                android:hint="@string/focus_address"
                android:padding="@dimen/survey5" />
        </LinearLayout>

        <EditText
            android:id="@+id/update_details_name_city"
            android:layout_width="match_parent"
            android:layout_height="@dimen/survey50height"
            android:layout_marginTop="@dimen/profile10margin"
            android:background="@drawable/new_rec_setting2"
            android:ems="10"
            android:gravity="right|center_vertical"
            android:hint="@string/focus_name_city"
            android:padding="@dimen/survey5">

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_gcn"
                android:textColor="#fff" />

            <CheckBox
                android:id="@+id/is_gcm"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_profil_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/turquoise"
        android:onClick="updateDitals"
        android:paddingBottom="@dimen/survey5"
        android:paddingTop="@dimen/survey5"
        android:text="אישור"
        android:textColor="#fff"
        android:textSize="@dimen/person18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/person3"
        android:layout_marginTop="@dimen/survey5"
        android:background="#fff" />

    <!--
             <Button
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/selector_focus_ok"
            android:gravity="center"
            android:onClick="updateDitals"
            android:text="@string/ok"
            android:textStyle="bold" />
    -->


</LinearLayout>