<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#9E9E9E">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="#424242"
        android:gravity="center|left"
        android:padding="10dp"
        android:text="@string/dialog_map_filter_header_text"
        android:textColor="#098686"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/lvMarkerFilter_DMF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/listview_row_dialog_mf"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#424242"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnCancel_Filter_DMF"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/turquoise"
            android:text="@string/btn_cancel"
            android:layout_margin="4dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"/>



        <TextView
            android:id="@+id/btnSelect_Filter_DMF"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/turquoise"
            android:text="@string/dialog_map_filter_btn_select"
            android:layout_margin="4dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"/>
    </LinearLayout>


</LinearLayout>